@@ -235,6 +235,8 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
       server config.
     - onmainwindow.cpp: wait 3 seconds before checking sshd startup state to
       allow it to come up.
+    - onmainwindow.cpp: adapt SSH host key warning message to new usermode
+      sshd possibilities.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 13:25:28 +0100
 
